--- a/index.html
+++ b/index.html
@@ -1,2 +1,116 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>skypy-webui</title>
+    <!--<link rel="stylesheet" href="https://pyscript.net/alpha/pyscript.css" />
+    <script defer src="https://pyscript.net/alpha/pyscript.js"></script>-->
+    <link rel="stylesheet" href="./css/bootstrap.min.css">
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.8.0/chart.min.js" integrity="sha512-sW/w8s4RWTdFFSduOTGtk4isV1+190E/GghVffMA9XczdJ2MDzSzLEubKAs5h0wzgSJOQTRYyaz73L3d6RtJSg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+</head>
+<body style="margin: 15px;">
+
+    <div class="card" style="left: 38%; width: fit-content; top: 10px;">
+        <div class="card-body">
+            <h1 class="text-center"><small class="text-muted">This is </small>skypy-webui</h1>
+            <p class="text-center">skypy-webui is a GUI in the browser for my library skypy</p>
+        </div>
+    </div>
+    <br><br>
+    <div class="alert alert-dismissible alert-danger mb-3">
+        <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+        <strong>Attention!</strong> <a href="#" class="alert-link">Read this</a> to see why these values may not be 100% accurate.
+    </div>
+    <div class="alert alert-dismissible alert-info mb-3">
+        <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+        <strong>Did you know this?</strong> I have also a website, <a href="#" class="alert-link">click here</a> to get to it!
+    </div>
+
+
+
+    <br><br>
+    <div class="row">
+
+        <div class="col">
+            <div class="card mb-3" style="width:fit-content;">
+                <div class="card-header">
+                    <h4>Bazaar prices <small class="text-muted">in coins</small> <span class="badge bg-primary">NEW</span></h4>
+                </div>
+                <div class="card-body">
+                    <canvas id="bazPrices" width="400px" height="400px"></canvas>
+                </div>
+                <div class="card-footer">
+                    <small class="text-muted">ABSOLUTELY NO WARRANTY</small>
+                </div>
+            </div>
+        </div>
+
+        <div class="col">
+            <div class="card mb-3" style="width:fit-content;">
+                <div class="card-header">
+                    <h4>Something else <small class="text-muted">in terraflops</small> <span class="badge bg-primary">BETA</span></h4>
+                </div>
+                <div class="card-body">
+                    <canvas id="myChart" width="400px" height="400px"></canvas>
+                </div>
+                <div class="card-footer">
+                    <small class="text-muted">ABSOLUTELY NO WARRANTY</small>
+                </div>
+            </div>
+        </div>
+
+        <div class="col">
+            <div class="card mb-3" style="width:fit-content;">
+                <div class="card-header">
+                    <h4>Mayor Election <small class="text-muted">in 5k players</small> <span class="badge bg-primary">NEW</span></h4>
+                </div>
+                <div class="card-body">
+                    <canvas id="mayorElection" width="400px" height="400px"></canvas>
+                </div>
+                <div class="card-footer">
+                    <small class="text-muted">ABSOLUTELY NO WARRANTY</small>
+                </div>
+            </div>
+        </div>
+
+    </div>
+
+
+
+    <script>
+    const ctx = document.getElementById('bazPrices').getContext('2d');
+    const myChart = new Chart(ctx, {
+        type: 'line',
+        data: {
+            labels: ['F-4', 'F-3', 'F-2', 'F-1', 'Latest Fetch'],
+            datasets: [{
+                label: 'Enchanted clay',
+                data: [19, 3, 5, 2, 3],
+                borderColor: [ 'rgba(255, 99, 132, 1)' ],
+                borderWidth: 1
+            },
+            {
+                label: 'Enchanted snow block',
+                data: [50, 30, 10, 30, 25],
+                borderColor: [ 'rgba(30, 255, 132, 1)' ],
+                borderWidth: 1
+            }]
+        },
+        options: {
+            scales: {
+                y: { beginAtZero: true }
+            }
+        }
+    });
+
+
+
+
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+</body>
 </html>
